todo-app-complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>To-Do List</title>
@@ -30,7 +30,6 @@
       <ul class="main__list" id="myUL"></ul>
     </main>
 
-  <script src="script.js"></script>
-
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
